권아진-링크 등록

--- a/products/kwon.html
+++ b/products/kwon.html
@@ -6,7 +6,7 @@
   <title>커버 픽서쿠션 기획</title>
 </head>
 <body>
-  <h1><a href=""><center>Pal-E World</center></a></h1>
+  <h1><a href="index.html"><center>Pal-E World</center></a></h1>
   <table>
     <tr>
       <td rowspan="8"><img src="https://www.cosinkorea.com/data/photos/20220622/art_1654151844121_272660.jpg" alt="쿠션" width="400" height="340"></td>
