--- a/products/gaeol.html
+++ b/products/gaeol.html
@@ -6,6 +6,7 @@
   <title>Document</title>
 </head>
 <body>
+  <h1><a href="index.html"><center>Pal-E World</center</a></h1>
   <header>
     <nav>
       <ul>
@@ -48,9 +49,9 @@
   <td>
     <form>
       <select id="option">
-        <option value="상품1">상품1</option>
-        <option value="상품2">상품2</option>
-        <option value="상품3">상품3</option>
+        <option value="상품1">상품 01. 바른 곡물효소 1박스+매실 효소 1박스</option>
+        <option value="상품2">상품 02. 바른 곡물효소 1박스+어린이 효소 1박스 </option>
+        <option value="상품3">상품 03. 바른 곡물효소 1박스+ 과채 효소 1박스</option>
       </select>
     </form>
   </td>
