--- a/order.html
+++ b/order.html
@@ -7,20 +7,42 @@
 </head>
 <body>
   <form action="">
-    <div>
-    <label for="user-name">이름</label>
-    <input type="text" id="user-name" autofocus>
-</div>
-<div>
-    <label for="phone">연락처</label>
-    <input type="tel" id="phone" placeholder="하이픈 빼고 입력해주세요">
-</div>
-<div>
-  <label for="address">주소</label>
-  <input type="text" id="address">
-</div>
-<label for="email">이메일</label>
-<input type="email" id="email">
-</form>
+    <fieldset><legend>주문정보</legend>
+    <li>
+        <label for="user-name">이름</label>
+        <input type="text" id="user-name" autofocus>
+    </li>
+    <li>
+        <label for="phone">연락처</label>
+        <input type="tel" id="phone" placeholder="하이픈 빼고 입력해주세요">
+    </li>
+    <li>
+      <label for="email">이메일</label>
+      <input type="email" id="email">
+    </li>
+  </fieldset>
+
+  </form>
+  <form action=""><fieldset>
+    <legend>배송정보</legend>
+    <input type="checkbox" id="shippingInfo" name="shippingInfo">
+    <label for="bill_info" class="check">주문 정보와 배송 정보가 같습니다.</label>
+    <li>
+      <label for="user-name">이름</label>
+      <input type="text" id="user-name" autofocus>
+  </li>
+  <li>
+      <label for="phone">연락처</label>
+      <input type="tel" id="phone" placeholder="하이픈 빼고 입력해주세요">
+  </li>
+  <li>
+    <label for="address">주소</label>
+    <input type="text" id="address">
+
+  </fieldset>
+  <input type="submit" value="주문하기">
+  <input type="reset" value="취소하기">
+  </form>
+
 </body>
 </html>
