권아진-메인페이지 작성

--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-메인페이지
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pal-E World</title>
+</head>
+<body>
+  <h1><a href="index.html"><center>Pal-E World</center></a></h1>
+  <br>
+  <h2><blockquote>⭐판매량 TOP⭐</blockquote></h2>
+  
+    <table>
+      <tr>
+        <td><img src="shoes.jpeg" alt="신발" width="350" height="300px" /></td>
+        <td><img src="https://www.cosinkorea.com/data/photos/20220622/art_1654151844121_272660.jpg" alt="쿠션" width="350" height="300"></td>
+        <td><img src="바른곡물효소.webp" alt="바른곡물효소" width="350" height="300"></td>
+        <td><h1>LOGIN</h1>
+          <label>ID<br><input type="text" name="id" id=""> </label><br>
+          <label>PASSWORD<br><input type="password" name="password" id=""> </label><br>
+          <center>
+            <br>
+            <input type="submit" name="submit" value="login">
+            <input type="reset" name="reset" value="reset">
+          </center>
+          <br>
+    
+          <label><a href="">회원가입</a></label></td>
+      </tr>
+      <tr>
+        <td><b>나이키 X 사카이 베이퍼와플</b></td>
+        <td><b>커버 픽서쿠션 기획 set</b></td>
+        <td><b>[공구]민트효소 티파인 효소 리뉴얼 단품</b></td>
+      </tr>
+      <tr>
+        <td>나이키 X 사카이 베이퍼와플 CV1363-001</td>
+        <td>SPF50+, PA++ 커버 픽서쿠션 본품+리필(15g)</td>
+        <td>민트 효소 공구 구매 이벤트 민트효소 30포-10분</td>
+      </tr>
+      <tr>
+        <td><del>1,414,710원</del> -> 1,400,400원</td>
+        <td><del>35,000원</del> -> 24,500원</td>
+        <td><del>32,000원</del> -> 39,000원</td>
+      </tr>
+    </table>
+</body>
+</html>
