html lang ko로 수정_오동환

--- a/join.html
+++ b/join.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,7 +9,7 @@
     <header>
       <nav>
         <center>
-          <a href="../index.html"><h1>Pal-E-World</h1></a>
+          <a href="../index.html"> <h1>Pal-E-World</h1></a>
         </center>
       </nav>
     </header>
