권아진-메인페이지 수정

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   
     <table>
       <tr>
-        <td><img src="shoes.jpeg" alt="신발" width="350" height="300px" /></td>
-        <td><img src="https://www.cosinkorea.com/data/photos/20220622/art_1654151844121_272660.jpg" alt="쿠션" width="350" height="300"></td>
-        <td><img src="바른곡물효소.webp" alt="바른곡물효소" width="350" height="300"></td>
+        <td><img src="products/img/shoes.jpeg" alt="신발" width="350" height="300px" /></td>
+        <td><img src="products/img/cushion.jpg" alt="쿠션" width="350" height="300"></td>
+        <td><img src="products/img/enzyme.webp" alt="바른곡물효소" width="350" height="300"></td>
         <td><h1>LOGIN</h1>
           <label>ID<br><input type="text" name="id" id=""> </label><br>
           <label>PASSWORD<br><input type="password" name="password" id=""> </label><br>
