--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   
     <table>
       <tr>
-        <td><img src="products/img/shoes.jpeg" alt="신발" width="350" height="300px" /></td>
-        <td><img src="products/img/cushion.jpg" alt="쿠션" width="350" height="300"></td>
-        <td><img src="products/img/enzyme.webp" alt="바른곡물효소" width="350" height="300"></td>
+        <td><a href="products/oh.html"><img src="products/img/shoes.jpeg" alt="신발" width="350" height="300px" /></a></td>
+        <td><a href="products/kwon.html"><img src="products/img/cushion.jpg" alt="쿠션" width="350" height="300"></a></td>
+        <td><a href="products/gaeol.html"><img src="products/img/enzyme.webp" alt="바른곡물효소" width="350" height="300"></a></td>
         <td><h1>LOGIN</h1>
           <label>ID<br><input type="text" name="id" id=""> </label><br>
           <label>PASSWORD<br><input type="password" name="password" id=""> </label><br>
