권아진-회원가입 링크 연결

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <input type="reset" name="reset" value="reset">
           </center>
           <br>
-          <label><a href="">회원가입</a></label></td>
+          <label><a href="join.html">회원가입</a></label></td>
       </tr>
       <tr>
         <td><b>나이키 X 사카이 베이퍼와플</b></td>
