--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <title>Pal-E World</title>
 </head>
 <body>
+  <div>
+  <iframe src="menu.html" frameborder="0" width="100" height="50px" name="menu"></iframe>
+  </div>   
+  <div>
+    <iframe src="list.html" frameborder="0" width="100" height="50px" name="menu"></iframe>  
+  </div>
   <h1><a href="index.html"><center>Pal-E World</center></a></h1>
   <br>
   <h2><blockquote>⭐판매량 TOP⭐</blockquote></h2>
