--- a/products/gaeol.html
+++ b/products/gaeol.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>공구 바른곡물 효소</title>
 </head>
 <body>
   <h1><a href="index.html"><center>Pal-E World</center</a></h1>
@@ -26,11 +26,11 @@
   </tr>
   <tr>
     <td><strong>소비자가</strong></td>
-    <td>32,000원</td>
+    <td><del>39,000원</del></td>
   </tr>
   <tr>
     <td><strong>판매가</strong></td>
-    <td>39,000원</td>
+    <td><strong>32,000원</strong></td>
   </tr>
   <tr>
     <td><strong>적립금</strong></td>
