--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 </head>
 <body>
   <div>
-  <iframe src="menu.html" frameborder="0" width="100" height="50px" name="menu"></iframe>
+  <iframe src="menu.html" frameborder="0" width="100%" height="50px" name="menu"></iframe>
   </div>  
-   
   <h1><a href="index.html"><center>Pal-E World</center></a></h1>
   <br>
   <h2><blockquote>⭐판매량 TOP⭐</blockquote></h2>
@@ -28,7 +27,7 @@
             <input type="reset" name="reset" value="reset">
           </center>
           <br>
-          <label><a href="join.html">회원가입</a></label></td>
+          </td>
       </tr>
       <tr>
         <td><b>나이키 X 사카이 베이퍼와플</b></td>
