권아진-내용수정

--- a/products/kwon.html
+++ b/products/kwon.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>커버 픽서쿠션 기획</title>
+  <title>커버 픽서쿠션 기획 set</title>
 </head>
 <body>
   <h1><a href="index.html"><center>Pal-E World</center></a></h1>
