--- a/products/gaeol.html
+++ b/products/gaeol.html
@@ -6,17 +6,9 @@
   <title>공구 바른곡물 효소</title>
 </head>
 <body>
-  <h1><a href="index.html"><center>Pal-E World</center</a></h1>
-  <header>
-    <nav>
-      <ul>
-        <li></li>
-      </ul>
-    </nav>
-  
-  </header>
+  <h1><a href="index.html"><center>Pal-E World</center></a></h1>
   <table><tr>
-    <td rowspan="8"><img src="../바른곡물효소.webp" height="340px" /></td>
+    <td rowspan="8"><img src="/products/img/enzaim.jpg" height="340px" /></td>
     <td><strong>상품명</strong></td>
     <td>[공구]민트효소 티파인 효소 리뉴얼 단품</td>
   </tr>
@@ -44,7 +36,7 @@
     <td><strong>후기작성</strong></td>
     <td>일반 리뷰 1,000원/포토리뷰 3,000원/포토우수후기사진 5,000원</td>
     </tr>
-  <tr>
+  
   <td><label for="option">옵션</label></td>
   <td>
     <form>
@@ -56,6 +48,5 @@
     </form>
   </td>
 </table>
-</tr>
 </body>
 </html>
