Erorr fix_donghwan

--- a/join.html
+++ b/join.html
@@ -9,7 +9,7 @@
     <header>
       <nav>
         <center>
-          <a href="../index.html"> <h1>Pal-E-World</h1></a>
+          <a href="../main.html"> <h1>Pal-E-World</h1></a>
         </center>
       </nav>
     </header>
