header link fix_donghwan

--- a/products/gaeol.html
+++ b/products/gaeol.html
@@ -1,52 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>공구 바른곡물 효소</title>
-</head>
-<body>
-  <h1><a href="index.html"><center>Pal-E World</center></a></h1>
-  <table><tr>
-    <td rowspan="8"><img src="/products/img/enzaim.jpg" height="340px" /></td>
-    <td><strong>상품명</strong></td>
-    <td>[공구]민트효소 티파인 효소 리뉴얼 단품</td>
-  </tr>
-  <tr>
-    <td><strong>상품요약정보</strong></td>
-    <td>민트 효소 공구 구매 이벤트 민트효소 30포 - 10분</td>
-  </tr>
-  <tr>
-    <td><strong>소비자가</strong></td>
-    <td><del>39,000원</del></td>
-  </tr>
-  <tr>
-    <td><strong>판매가</strong></td>
-    <td><strong>32,000원</strong></td>
-  </tr>
-  <tr>
-    <td><strong>적립금</strong></td>
-    <td>1,600원(5%)</td>
-  </tr>
-  <tr>
-    <td><strong>배송비</strong></td>
-    <td>2,500원(5,000원 이상 구매 시 무료)</td>
-  </tr>
-  <tr>
-    <td><strong>후기작성</strong></td>
-    <td>일반 리뷰 1,000원/포토리뷰 3,000원/포토우수후기사진 5,000원</td>
-    </tr>
-  
-  <td><label for="option">옵션</label></td>
-  <td>
-    <form>
-      <select id="option">
-        <option value="상품1">상품 01. 바른 곡물효소 1박스+매실 효소 1박스</option>
-        <option value="상품2">상품 02. 바른 곡물효소 1박스+어린이 효소 1박스 </option>
-        <option value="상품3">상품 03. 바른 곡물효소 1박스+ 과채 효소 1박스</option>
-      </select>
-    </form>
-  </td>
-</table>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>공구 바른곡물 효소</title>
+  </head>
+  <body>
+    <h1>
+      <a href="/main.html"><center>Pal-E World</center></a>
+    </h1>
+    <table>
+      <tr>
+        <td rowspan="8">
+          <img src="/products/img/enzaim.jpg" height="340px" />
+        </td>
+        <td><strong>상품명</strong></td>
+        <td>[공구]민트효소 티파인 효소 리뉴얼 단품</td>
+      </tr>
+      <tr>
+        <td><strong>상품요약정보</strong></td>
+        <td>민트 효소 공구 구매 이벤트 민트효소 30포 - 10분</td>
+      </tr>
+      <tr>
+        <td><strong>소비자가</strong></td>
+        <td><del>39,000원</del></td>
+      </tr>
+      <tr>
+        <td><strong>판매가</strong></td>
+        <td><strong>32,000원</strong></td>
+      </tr>
+      <tr>
+        <td><strong>적립금</strong></td>
+        <td>1,600원(5%)</td>
+      </tr>
+      <tr>
+        <td><strong>배송비</strong></td>
+        <td>2,500원(5,000원 이상 구매 시 무료)</td>
+      </tr>
+      <tr>
+        <td><strong>후기작성</strong></td>
+        <td>일반 리뷰 1,000원/포토리뷰 3,000원/포토우수후기사진 5,000원</td>
+      </tr>
+
+      <td><label for="option">옵션</label></td>
+      <td>
+        <form>
+          <select id="option">
+            <option value="상품1">
+              상품 01. 바른 곡물효소 1박스+매실 효소 1박스
+            </option>
+            <option value="상품2">
+              상품 02. 바른 곡물효소 1박스+어린이 효소 1박스
+            </option>
+            <option value="상품3">
+              상품 03. 바른 곡물효소 1박스+ 과채 효소 1박스
+            </option>
+          </select>
+        </form>
+      </td>
+    </table>
+  </body>
 </html>
