--- a/index.html
+++ b/index.html
@@ -45,14 +45,21 @@
         <td><del>32,000원</del> -> 39,000원</td>
       </tr>
     </table>
+    <br><br><br><br><br><br><br><br><br><br><br>
     <footer>
-      <div id="bottommenu">
-        <ul><li><a href="#">회사 소개</a></li></ul>
-        <ul><li><a href="#">개인정보처리방침</a></li></ul>
-        <ul><li><a href="#">이용양관</a></li></ul>
-        <ul><li><a href="#">문의사항</a></li></ul>
-
-      </div>
+        <a href="#">회사 소개</a>
+        <a href="#">개인정보처리방침</a></li>
+        <a href="#">이용양관</a>
+        <a href="#">문의사항</a>
     </footer>
-</body>
+
+
+
+
+
+
+
+   
+
+  </body>
 </html>
