form action link fix_donghwan

--- a/join.html
+++ b/join.html
@@ -14,7 +14,7 @@
       </nav>
     </header>
     <main>
-      <form action="index.html">
+      <form action="/main.html">
         <fieldset>
           <legend>가입 정보</legend>
           <div>
