--- a/order.html
+++ b/order.html
@@ -26,7 +26,7 @@
         </li>
       </fieldset>
     </form>
-    <form action="">
+    <form action="/main.html">
       <fieldset>
         <legend>배송정보</legend>
         <input type="checkbox" id="shippingInfo" name="shippingInfo" />
