index page error fix_donghwan

--- a/index.html
+++ b/index.html
@@ -1,68 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pal-E World</title>
-</head>
-<body>
-  <div>
-  <iframe src="menu.html" frameborder="0" width="100%" height="50px" name="menu"></iframe>
-  </div>  
-  <h1><a href="index.html"><center>Pal-E World</center></a></h1>
-  <br>
-  <h2><blockquote>⭐판매량 TOP⭐</blockquote></h2>
-  
-    <table>
-      <tr>
-        <td><a href="products/oh.html"><img src="products/img/shoes.jpeg" alt="신발" width="350" height="300px" /></a></td>
-        <td><a href="products/kwon.html"><img src="products/img/cushion.jpg" alt="쿠션" width="350" height="300"></a></td>
-        <td><a href="products/gaeol.html"><img src="products/img/enzyme.webp" alt="바른곡물효소" width="350" height="300"></a></td>
-        <td colspan="4"><h1>LOGIN</h1>
-          <label>ID<br><input type="text" name="id" id=""> </label><br>
-          <label>PASSWORD<br><input type="password" name="password" id=""> </label><br>
-          <center>
-            <br>
-            <input type="submit" name="submit" value="login">
-            <input type="reset" name="reset" value="reset">
-          </center>
-          <br>
-          </td>
-      </tr>
-      <tr>
-        <td><b>나이키 X 사카이 베이퍼와플</b></td>
-        <td><b>커버 픽서쿠션 기획 set</b></td>
-        <td><b>[공구]민트효소 티파인 효소 리뉴얼 단품</b></td>
-      </tr>
-      <tr>
-        <td>나이키 X 사카이 베이퍼와플 CV1363-001</td>
-        <td>SPF50+, PA++ 커버 픽서쿠션 본품+리필(15g)</td>
-        <td>민트 효소 공구 구매 이벤트 민트효소 30포-10분</td>
-      </tr>
-      <tr>
-        <td><del>1,414,710원</del> -> 1,400,400원</td>
-        <td><del>35,000원</del> -> 24,500원</td>
-        <td><del>32,000원</del> -> 39,000원</td>
-      </tr>
-    </table>
-    <br><br><br><br><br><br><br><br><br><br><br>
-    <footer>
-        <a href="#">회사 소개</a>
-        <a href="#">개인정보처리방침</a></li>
-        <a href="#">이용양관</a>
-        <a href="#">문의사항</a>
-    </footer>
-
-
-
-
-
-
-
-   
-
-=======
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -84,9 +21,15 @@
         frameborder="0"
         width="100%"
         height="600px"
-        name="main"
+        name="menu"
       ></iframe>
     </div>
->>>>>>> f8a236f77931052f9142428dd2fae6d7b24d2883
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
   </body>
+  <footer>
+    <a href="#">회사 소개</a>
+    <a href="#">개인정보처리방침</a>
+    <a href="#">이용양관</a>
+    <a href="#">문의사항</a>
+  </footer>
 </html>
