권아진-링크수정

--- a/main.html
+++ b/main.html
@@ -34,7 +34,7 @@
         <td>
           <a href="products/gaeol.html"
             ><img
-              src="/products/img/enzaim.jpg"
+              src="./products/img/enzaim.jpg"
               alt="바른곡물효소"
               width="350"
               height="300"
