iframe error fix_donghwan

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         frameborder="0"
         width="100%"
         height="600px"
-        name="menu"
+        name="main"
       ></iframe>
     </div>
     <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
