typo fix_donghwan

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         name="main"
       ></iframe>
     </div>
-    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+    <br />
   </body>
   <footer>
     <a href="#">회사 소개</a>
     <a href="#">개인정보처리방침</a>
-    <a href="#">이용양관</a>
+    <a href="#">이용약관</a>
     <a href="#">문의사항</a>
   </footer>
 </html>
