h1 link fix_donghwan

--- a/products/oh.html
+++ b/products/oh.html
@@ -7,11 +7,9 @@
   </head>
   <body>
     <header>
-      <nav>
-        <center>
-          <a href="/main.html"><h1>Pal-E-World</h1></a>
-        </center>
-      </nav>
+      <h1>
+        <a href="/main.html"><center>Pal-E World</center></a>
+      </h1>
     </header>
 
     <main>
