image fix - dognwhan

--- a/products/gaeol.html
+++ b/products/gaeol.html
@@ -12,7 +12,7 @@
     <table>
       <tr>
         <td rowspan="8">
-          <img src="/products/img/enzaim.jpg" height="340px" />
+          <img src="./img/enzaim.jpg" height="340px" />
         </td>
         <td><strong>상품명</strong></td>
         <td>[공구]민트효소 티파인 효소 리뉴얼 단품</td>
