--- a/products/oh.html
+++ b/products/oh.html
@@ -16,7 +16,7 @@
       <table>
         <tr>
           <td rowspan="8">
-            <img src="/products/img/shoes.jpeg" height="340px" />
+            <img src="./img/shoes.jpeg" height="340px" />
           </td>
           <td>상품명</td>
           <td>나이키 X 사카이 베이퍼와플</td>
