권아진-링크수정

--- a/products/gaeol.html
+++ b/products/gaeol.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>
-      <a href="/main.html"><center>Pal-E World</center></a>
+      <a href="../main.html"><center>Pal-E World</center></a>
     </h1>
     <table>
       <tr>
