--- a/products/oh.html
+++ b/products/oh.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <h1>
-        <a href="/main.html"><center>Pal-E World</center></a>
+        <a href="../main.html"><center>Pal-E World</center></a>
       </h1>
     </header>
 
