권아진-링크수정

--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
 <h1>
-  <a href="/main.html"><center>Pal-E World</center></a>
+  <a href="./main.html"><center>Pal-E World</center></a>
 </h1>
 <br />
 <h2><blockquote>⭐판매량 TOP⭐</blockquote></h2>
