--- a/order.html
+++ b/order.html
@@ -35,7 +35,6 @@
       <input type="text" id="address" />
     </li>
   </fieldset>
-  <button>주문완료</button>
-  <button><a href="../main.html">취소하기/</a></button>
-
+  <input type="submit" value="주문하기" />
+  <div><button><a href="../main.html">취소하기/</a></button></div>
 </form>
