권아진-로그인수정

--- a/main.html
+++ b/main.html
@@ -33,16 +33,18 @@
       /></a>
     </td>
     <td colspan="4">
-      <h1>LOGIN</h1>
-      <label>ID<br /><input type="text" name="id" id="" /> </label><br />
-      <label
-        >PASSWORD<br /><input type="password" name="password" id="" /> </label
-      ><br />
-      <center>
-        <br />
-        <input type="submit" name="submit" value="login" />
-        <input type="reset" name="reset" value="reset" />
-      </center>
+      <form>
+        <h1>LOGIN</h1>
+        <label>ID<br /><input type="text" name="id" id="" /> </label><br />
+        <label
+          >PASSWORD<br /><input type="password" name="password" id="" /> </label
+        ><br />
+        <center>
+          <br />
+          <input type="submit" name="submit" value="login" />
+          <input type="reset" name="reset" value="reset" />
+        </center>
+      </form>
       <br />
     </td>
   </tr>
