Error fix_donghwan

--- a/order.html
+++ b/order.html
@@ -15,7 +15,7 @@
     </li>
   </fieldset>
 </form>
-<form action="./index.html">
+<form action="./main.html">
   <fieldset>
     <legend>배송정보</legend>
     <input type="checkbox" id="shippingInfo" name="shippingInfo" />
@@ -36,5 +36,7 @@
     </li>
   </fieldset>
   <input type="submit" value="주문하기" />
-  <div><button><a href="./index.html">취소하기</a></button></div>
+  <div>
+    <button><a href="./index.html">취소하기</a></button>
+  </div>
 </form>
