Error fix_donghwan

--- a/order.html
+++ b/order.html
@@ -15,7 +15,7 @@
     </li>
   </fieldset>
 </form>
-<form action="./main.html">
+<form action="https://iamodh.github.io/pal-e-people/">
   <fieldset>
     <legend>배송정보</legend>
     <input type="checkbox" id="shippingInfo" name="shippingInfo" />
